chrome/browser/task_manager/providers/task_provider.h
@@ -50,6 +50,10 @@ class TaskProvider {
   void NotifyObserverTaskAdded(Task* task) const;
   void NotifyObserverTaskRemoved(Task* task) const;
   void NotifyObserverTaskUnresponsive(Task* task) const;
+  void UpdateTaskProcessInfoAndNotifyObserver(
+      Task* existing_task,
+      base::ProcessHandle new_process_handle,
+      base::ProcessId new_process_id) const;
 
  private:
   // This will be called once an observer is set for this provider. When it is
