chrome/browser/task_manager/task_manager_browsertest_util.h
@@ -21,6 +21,8 @@ namespace browsertest_util {
 // Specifies some integer-valued column of numeric data reported by the task
 // manager model. Please add more here as needed by tests.
 enum class ColumnSpecifier {
+  PROCESS_ID,
+  PHYSICAL_MEMORY,
   V8_MEMORY,
   V8_MEMORY_USED,
   SQLITE_MEMORY_USED,
